Update index.html with meta tag for mobile

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script type="text/javascript">
 
 		const queryString = window.location.search;//"Website=CrawlImmoscout&Timestamp=2023-06-06+23%3A48%3A13.776813&Title=None&Bezirk=Tempelhof-Schöneberg&Ortsteil=Schöneberg&PLZ=12159&Street=Wielandstraße&Address=Wielandstrasse+4+12159+Berlin&Longitude=13.3389576&Latitude=52.4736649&Kaltmiete=None&Warmmiete=None&Nebenkosten=None&Rooms=None&Bedrooms=None&Bathrooms=None&m2=None&Type=None&Heating+costs=None&House+number=4&Floor+number=None&FU+distance=1940.978319308088&HU+distance=3219.7368421052633&TU+distance=2323.4333606741934&Closest+Bahnhof=Friedenau&Closest+supermarket=LPG+BioMarkt&Closest+tram=Lüneburger+Straße&Heating+type=None&Heating+source=None&Distance+to+Bahnhof=580.15&Distance+to+supermarket=328.48&Distance+to+tram=6335.51&Move+in+from=None"//
