Make buttons and textinputs flex-grow

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script type="text/javascript">
 
 		const queryString = window.location.search;//"Website=CrawlImmoscout&Timestamp=2023-06-06+23%3A48%3A13.776813&Title=None&Bezirk=Tempelhof-Schöneberg&Ortsteil=Schöneberg&PLZ=12159&Street=Wielandstraße&Address=Wielandstrasse+4+12159+Berlin&Longitude=13.3389576&Latitude=52.4736649&Kaltmiete=None&Warmmiete=None&Nebenkosten=None&Rooms=None&Bedrooms=None&Bathrooms=None&m2=None&Type=None&Heating+costs=None&House+number=4&Floor+number=None&FU+distance=1940.978319308088&HU+distance=3219.7368421052633&TU+distance=2323.4333606741934&Closest+Bahnhof=Friedenau&Closest+supermarket=LPG+BioMarkt&Closest+tram=Lüneburger+Straße&Heating+type=None&Heating+source=None&Distance+to+Bahnhof=580.15&Distance+to+supermarket=328.48&Distance+to+tram=6335.51&Move+in+from=None"//
@@ -190,6 +190,20 @@
 			background-color: blue;
 			color: white;
 		}
+		div.btns {
+			display: flex;
+			flex-direction: row;
+		}
+		div.btns input[type="button"]{
+			display: flex;
+			flex-grow: 1;
+			justify-content: center;
+			text-align: center;
+			margin: 2px;
+		}
+		input[type="text"] {
+			width: 100%
+		}
 	</style>
 </head>
 <body>
@@ -246,13 +260,17 @@
 		<input type="checkbox" id="ebk" name="ebk" checked>
 		<label for="ebk">the fitted kitchen</label><br>
 
-		<input type="button" name="german" value="German" onClick="germanText(this.form)">
-		<input type="button" name="english" value="English" onClick="germanText(this.form)">
-		<input type="button" name="clear" value="Clear textbox" onClick="document.getElementById('editor').innerText=''">
+		<div class="btns">
+			<input type="button" name="german" value="German" onClick="germanText(this.form)">
+			<input type="button" name="english" value="English" onClick="germanText(this.form)">
+			<input type="button" name="clear" value="Clear textbox" onClick="document.getElementById('editor').innerText=''">
+		</div>
 	</form><br><br>
 	
 	<span class="textarea" id="editor" role="textbox" contenteditable>[DUMMY TEXT]</span>
 	<br><br>
-	<button onclick="toClipboard();window.close()">Copy &amp; Exit</button>
-	<button onclick="window.close()">Just Exit</button>
+	<div class="btns">
+		<input type="button" name="copyAndExit" value="Copy & Exit" onClick="toClipboard();window.close()">
+		<input type="button" name="exit" value="Just Exit" onClick="window.close()">
+	</div>
 </body>
