--- a/index.html
+++ b/index.html
@@ -177,9 +177,10 @@
 			flex-grow: 1;
 			justify-content: center;
 			text-align:center;
-			border-style: solid;
-			border-width: 1px;
+			border-width: 2px;
 			border-radius: 5px;
+			border-style: solid;
+			border-color: #ccc;
 			margin: 2px;
 			padding: 2px 6px;
 		}
@@ -200,9 +201,26 @@
 			justify-content: center;
 			text-align: center;
 			margin: 2px;
+			padding: 2px 6px;
+			border-width: 2px;
+			border-radius: 5px;
+			border-style: solid;
+			border-color: #ccc;
+			font-size: 16px;
 		}
 		input[type="text"] {
-			width: 100%
+			width: 100%;
+			border-width: 2px;
+			border-style: solid;
+			border-color: #ccc;
+		}
+		input[type="checkbox"] {
+			width: 20px;
+        	height: 20px;
+			margin: 5px 2px;
+		}
+		label {
+			font-size: 16px;
 		}
 	</style>
 </head>
