Update index.html with shorter salutation text

--- a/index.html
+++ b/index.html
@@ -375,8 +375,8 @@
 		<input type="text" id="recipient" value="Damen und Herren"><br>
 		<input id="salutation" type="hidden" name="salutation">
 		<ul class="select" data-storage="salutation">
-			<li id="sal-male">Add male salutation</li>
-			<li id="sal-female">Add female salutation</li>
+			<li id="sal-male">Add Herr/Mr.</li>
+			<li id="sal-female">Add Frau/Ms.</li>
 			<li class="selected">[Skip]</li>
 		</ul>
 		<b>Title:</b><br>
