Update index.html correcting bug with not working salutations

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 		function germanText(form){
 			//Calculate salutation
 			salutation=""
-			if(form.salutation.value=="Add male salutation"){
+			if(form.salutation.value=="Add Herr/Mr."){
 				salutation="Herr "
 			}
-			if(form.salutation.value=="Add female salutation"){
+			if(form.salutation.value=="Add Frau/Ms."){
 				salutation="Frau "
 			}
 			// Produce message:
@@ -129,10 +129,10 @@
 		function englishText(form){
 			//Calculate salutation
 			salutation=""
-			if(form.salutation.value=="Add male salutation"){
+			if(form.salutation.value=="Add Herr/Mr."){
 				salutation="Mr. "
 			}
-			if(form.salutation.value=="Add female salutation"){
+			if(form.salutation.value=="Add Frau/Ms."){
 				salutation="Ms. "
 			}
 			// Produce message:
